src/index.scss
$lg-lap-top: 1050px;
$lap-top: 910px;
$sm-lap-top: 800px;
$phone: 500px;

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
  display: inline-block;
}

@import url("https://fonts.googleapis.com/css?family=Lato|Merriweather|Playfair+Display&display=swap");

@import url("https://fonts.googleapis.com/css?family=Grand+Hotel&display=swap");

span,
p,
a,
label,
button {
  font-size: 1.1rem;
  color: #36383b;
  font-family: "Lato", sans-serif;
  line-height: 1.5;
}

h1,
h2,
h3 {
  font-family: "Merriweather", serif;
  color: #36383b;
  //   color: red;
}

header {
  border-bottom: 1px solid rgb(206, 206, 206);
  height: 20vh;
  background: #36383b;

  .header-container {
    max-width: 1400px;
    margin: 0 auto;
    //  border: 1px solid blue;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    padding: 0rem 1rem 0;
    align-items: center;

    h1 {
      a {
        font-family: "Grand Hotel", cursive;
        font-size: 5rem;
        color: white;
      }
    }

    nav {
      a {
        text-transform: uppercase;
      }
    }
  }
}

// END OF HEADER

////// RESULTS CONTIANER STARTS HERE

.result-container {
  //   border: 1px solid red;
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  max-width: 1400px;
  margin: 7rem auto;

  .single-card {
    border: 1px solid rgb(226, 225, 225);
    width: 420px;
    padding: 0.5rem 0;
    margin-bottom: 2rem;
    //  border-radius: 10px;

    @media (max-width: $lap-top) {
      width: 400px;
    }

    @media (max-width: $sm-lap-top) {
      width: 450px;
    }

    &:last-child {
      margin-right: 0;
    }

    h3 {
      text-align: center;
      padding: 0.5rem 0 1rem;
      border-bottom: 1px solid rgb(230, 227, 227);
      // border: 1px solid red;
      // margin-bottom: 1rem;
      // background: ;
    }
    .rating {
      // border: 1px solid red;
      display: flex;
      justify-content: space-around;
      padding: 0.5rem 2.5rem;

      span {
        &:last-child {
          color: gold;
          margin-left: 2rem;
        }
      }
    }

    .reviews-container {
      // border: 1px solid red;
      margin: 1rem 0;

      .review-title {
        text-align: center;
        font-size: 1.3rem;
        margin-bottom: 0.5rem;
      }
      .review {
        width: 100%;
        height: 20vh;
        //   padding: 0 0.5rem;
        //   p {
        //     padding: 0.2rem 0;
        img {
          width: 100%;
          height: 100%;
        }
        //   }
      }
    }

    .more {
      // border: 1px solid red;
      display: flex;
      justify-content: center;
      margin: 1rem 0;

      a {
        text-transform: capitalize;
        border: 1px solid gold;
        padding: 0.4rem 1.8rem;
        border-radius: 10px;
        background: gold;
        //   color: white;
      }
    }
  }
}

///// END OF RESULTS CONTAINER

//// ABOUT PAGE STARTS HERE

.about-container {
  //   border: 1px solid red;
  max-width: 1400px;
  margin: 7rem auto;

  .profile-container {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    padding: 1rem;

    @media (max-width: $lg-lap-top) {
      justify-content: space-around;
    }

    @media (max-width: $sm-lap-top) {
      flex-direction: column;
      align-items: center;
    }

    .profile {
      width: 47%;
      margin-bottom: 5rem;
      padding: 1rem;
      // border: 1px solid rgb(203, 203, 206);
      text-transform: capitalize;

      @media (max-width: $sm-lap-top) {
        width: 70%;
      }

      @media (max-width: $phone) {
        margin-bottom: 2rem;
      }

      .bg-img {
        width: 250px;

        @media (max-width: $lg-lap-top) {
          width: 250px;
        }

        @media (max-width: $phone) {
          width: 200px;
        }
        margin: 0 auto;

        img {
          width: 100%;
          height: 100%;
          border-radius: 50%;
        }
      }

      .profile-info {
        //   border: 1px solid red;
        text-align: center;
        margin-top: 1.5rem;

        @media (max-width: $phone) {
          margin-top: 1rem;
        }

        p {
          padding: 0.2rem 0;
          font-size: 1.7rem;
        }

        .github {
          //  border: 1px solid red;
          padding: 0;
        }
        .website {
          //  border: 1px solid red;
          padding: 0;
          margin-top: -0.7rem;
        }
      }

      .worst-date {
        //   border: 1px solid blue;
        margin: 1.5rem 0 0;

        @media (max-width: $phone) {
          margin: 1.5rem 0 0;
        }

        h3 {
          margin: 1rem 0 1rem;
          font-size: 1.4rem;
          text-align: center;
        }
        p {
          text-transform: lowercase;
          width: 40%;
          margin: 0 auto;
          //  border: 1px solid red;
          //  text-align: center;
        }
      }
    }
  }

  .zomato {
    text-align: center;
    margin: 4rem 0;
    //  border: 1px solid red;

    @media (max-width: $phone) {
      margin: 2rem 0;
    }

    .zomato-logo {
      width: 35%;
      height: 15vh;
      margin: 2rem auto 0;
      background: url("https://searchlogovector.com/wp-content/uploads/2019/05/zomato-logo-vector.png");
      background-size: cover;
      background-position: center;
      background-repeat: no-repeat;
      border-radius: 5px;
      // border: 1px solid red;
      @media (max-width: $phone) {
        width: 90%;
        height: 14vh;
      }

      a {
        width: 55%;
        height: 100%;
        color: transparent;
      }
    }
  }
}

/// END OF ABOUT PAGE

//// FOOTER STARTS HERE

footer {
  border-top: 1px solid rgb(216, 215, 215);
  background: gold;
  color: #36383b;

  .footer-container {
    max-width: 100%;
    margin: 0 auto;
    //  border: 1px solid red;
    padding: 1rem;

    @media (max-width: $phone) {
      padding: 1rem;
    }

    p {
      font-size: 0.9rem;
      text-align: center;

      .copyright {
        margin-right: 1rem;
      }
    }

    nav {
      display: flex;
      flex-direction: column;
      // border: 1px solid red;

      a {
        text-transform: uppercase;
        font-size: 1rem;

        &:hover {
          color: white;
        }
      }
    }
  }
}

